--- a/_posts/2014-02-22-thesis-5Es.markdown
+++ b/_posts/2014-02-22-thesis-5Es.markdown
@@ -3,6 +3,7 @@ layout: post
 title:  "Thesis Alternatives — 5 E's"
 date:   2014-02-22
 categories: thesis
+lead: "A technique borrowed from Conifer Research"
 ---
 ###Alternative Prototype
 ![]({{ site.url }}/images/5Es_alt_prototype.gif)
