--- a/_posts/2018-03-11-writing.markdown
+++ b/_posts/2018-03-11-writing.markdown
@@ -8,33 +8,34 @@ lead: "Where did 2017 go?"
 
 > "Okay Google, what is the last thing I wrote?"
 
-Well I find myself today looking back and reflecting on what wasn't. I didn't write much (for myself) in 2017. I wrote a lot of emails and briefs for my newish job, but not much of anything else.
+Well, I find myself today looking back and reflecting on what wasn't. I didn't write much (for myself) in 2017. I wrote a lot of emails and briefs for my newish job, but not much of anything else.
 
 I don't regret that. It's been a busy year for me. I started a little over a year ago working full time for a big video game company. Which has been fun but consuming due to a lot of travel. On top of that, my son is now one and half and quickly showing signs of toddler-hood.
 
-With work I have traveled the world probably three times over and spent too much time on planes. I flew to Stockholm last fall twice. The second time, on the way home, I took up a whole row with some colleagues and we played Mario Cart as we soared over Greenland at 600 some miles per hour.
+With work I have traveled the world probably three times over and spent too much time on planes. I flew to Stockholm last fall twice. The second time, on the way home&mdash; took up a whole row with some colleagues and we played Mario Cart as we soared over Greenland at six hundred miles per hour.
 
-And my son, he is growing fast. He has an appetite for speed. Like his father I guess. I was asking my wife just yesterday when a kid is old enough to ice skate. She rolled her eyes at me. 
+And my son, he is growing fast. He has an appetite for speed. Like his father I guess. I was asking my wife just yesterday when a kid is old enough to ice skate. <i>She rolled her eyes at me.</i>
 
 > "Okay Google, when is a kid old enough to Ice Skate"
 
-Sometimes I take my son skateboarding. He stands on the tip of the board while I peddle from behind. I hold both his hands up as he sails the sidewalk. Have you ever heard a kinder sound than the squeal of excitement and terror spun in one?
+Sometimes I take my son skateboarding. He stands on the tip of the board while I peddle from behind. I hold both his hands up as he sails the sidewalk. Have you ever heard a kinder sound than the squeal of a small child when their excitement and terror is spun into one stereophonic tone?
 
-When I travel I read the New Yorker. It's become a ritual. I used be able to work on planes, but now that I am on them so often I don't ever want to work. Instead, although I usually think I a going to play my Nintendo Switch and am a freak about charging it, I usually just read an article or two. The writing, style, and editorial standard comfort me about where I fear the world is headed.
+When I travel I read the New Yorker. It's become a ritual. I used be able to work on planes, but now that I am on them so often I don't ever want to work. Instead, although I usually think I a going to play my Nintendo Switch and am a freak-a-zoid about charging it, I usually just read an article or two. The writing, style of storytelling, and editorial standard comfort me. Whereas I am otherwise constantly living in fear of where the world is headed.
 
-> "Okay Google, play Idoicracy on the Living Room TV Chromecast"
+> "Okay Google, play Idiocracy on the Living Room TV Chromecast"
 
-For 2018 I want to focus in on a few things to learn and write about in detail. I find the focusing part though, hard to focus. I like being a jack of many trades but I heard this woman on the radio talking about making a list and going down it in order. So maybe if I focus I can then procrastinate on the prioritizing. 
+For 2018 I want to focus in on a few things to learn and write about in detail. I find the focusing part though... hard to focus on. I pride myself as a jack of many trades. But when I heard this woman on the radio talking about making a list and going down it in order and learning everything she could about a specific subject. I thought: maybe if I can focus in on something I can then <em>procrastinate on the prioritizing</em>. 
 
-Nobody will be surprised if I don't write much here this year, especially myself. But let's say I do. Let's say it's the best writing I've done ever. It's focused and prioritized. It's sincere and honest. It's about ten things I came up with at random and dropped here:
+Nobody will be surprised if I don't write much here this year, especially myself, considering, to be completely honest, that this blog is an exercise in ego. But let's say, for the sake of 2018, that I do write a lot here this year. And why not! Let's go out on a limb and say it's the best writing I've done ever! Because it's focused and procrastinately prioritized. And it is sincere and honest. It is about ten things I came up with at random just now and am dropped right here:
 
 * Charcoal Grilling
-* Beans
-* History of Skateboarding
-* Venice, Los Angeles
+* History of Street Skateboarding
 * Mescal
 * Cappuccinos
-* Metrics
-* Audis
+* Metrics for Business
+* John Madden
+* Buffalo
+* David Bowie
+* Video Games Statistics
 
 > "Okay Google, remind me of this post in a year"
