--- a/_posts/2018-03-11-writing.markdown
+++ b/_posts/2018-03-11-writing.markdown
@@ -20,11 +20,11 @@ And my son, he is growing fast. He has an appetite for speed. Like his father I 
 
 Sometimes I take my son skateboarding. He stands on the tip of the board while I peddle from behind. I hold both his hands up as he sails the sidewalk. Have you ever heard a kinder sound than the squeal of a small child when their excitement and terror is spun into one stereophonic tone?
 
-When I travel I read the New Yorker. It's become a ritual. I used be able to work on planes, but now that I am on them so often I don't ever want to work. Instead, although I usually think I a going to play my Nintendo Switch and am a freak-a-zoid about charging it, I usually just read an article or two. The writing, style of storytelling, and editorial standard comfort me. Whereas I am otherwise constantly living in fear of where the world is headed.
+When I travel I read the New Yorker. It's become a ritual. I used to be able to work on planes, but now that I am on them so often I don't ever want to work. Instead, although I usually think I a going to play my Nintendo Switch and am a freak-a-zoid about charging it, I usually just read an article or two. The writing, style of storytelling, and editorial standard comfort me. Whereas I am otherwise constantly living in fear of where the world is headed.
 
 > "Okay Google, play Idiocracy on the Living Room TV Chromecast"
 
-For 2018 I want to focus in on a few things to learn and write about in detail. I find the focusing part though... hard to focus on. I pride myself as a jack of many trades. But when I heard this woman on the radio talking about making a list and going down it in order and learning everything she could about a specific subject. I thought: maybe if I can focus in on something I can then <em>procrastinate on the prioritizing</em>. 
+For 2018 I want to focus in on a few things to learn and write about in detail. I find the focusing part though... hard to focus on. I pride myself as a jack of many trades. But when I heard this woman on the radio talking about making a list and going down it in order and learning everything she could about each specific subject, I thought: maybe if I can focus in on something I can then <em>procrastinate on the prioritizing</em>. 
 
 Nobody will be surprised if I don't write much here this year, especially myself, considering, to be completely honest, that this blog is an exercise in ego. But let's say, for the sake of 2018, that I do write a lot here this year. And why not! Let's go out on a limb and say it's the best writing I've done ever! Because it's focused and procrastinately prioritized. And it is sincere and honest. It is about ten things I came up with at random just now and am dropped right here:
 
