--- a/_posts/2018-03-11-writing.markdown
+++ b/_posts/2018-03-11-writing.markdown
@@ -37,5 +37,6 @@ Nobody will be surprised if I don't write much here this year, especially myself
 * Buffalo
 * David Bowie
 * Video Games Statistics
+* Oakland Hip Hop
 
 > "Okay Google, remind me of this post in a year"
