updated almost everything. Following up from redesign late last year. Adding two new blog post.

--- a/_posts/2018-10-13-do-i-draw.markdown
+++ b/_posts/2018-10-13-do-i-draw.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Do I Draw?"
+title:  "Taking leave from work"
 date:   2018-10-13
 categories: design fun
 lead: "Fun ideas and projects for me during leave from work"
