--- a/.quotes.md
+++ b/.quotes.md
@@ -1,10 +1,10 @@
 ---
 layout: page
-title: Fun
-permalink: /fun/
+title: Quotes
+permalink: /quotes/
 ---
 
-{% for post in site.categories.fun %}
+{% for post in site.categories.quotes %}
     
 <div class="post-list">
 <h2>
