--- a/_posts/2019-03-07-damn-2019.markdown
+++ b/_posts/2019-03-07-damn-2019.markdown
@@ -8,23 +8,23 @@ lead: "Ellijha Cummings is right"
 
 2019 so far has been rougher than usual. The game I worked on most of the last two years is one of the biggest flops in the history of AAA titles. Our fearless leader has taken another position at another gaming company. I broke my ankle the day before I was to return from work from paternity leave. And now we are expecting to withstand massive layoffs and budgets cuts in response to the company missing it's yearly projection by upwards of 500 million dollars.
 
-My wife and I are wondering what's next for us. Do we stay in the expensive cities where we've been able to find work but can't afford childcare? Where do we go where we can make enough to eat well, live in a safe neighborhood, pay our debts, and still be able to use your professional skills in tech? Is it time for us to venture out on our own? Start something new? Or maybe get off the grid completely?
+My wife and I are wondering what's next for us. Do we stay in the expensive cities where we've been able to find work but can't afford childcare? Where do we go where we can make enough to eat well, live in a safe neighborhood, pay our debts, and still be able to use our professional skills in tech? Is it time for us to venture out on our own? Start something new? Or maybe get off the grid completely? That seams scary and abandoning.
 
-Elijah said, "when something happens to you, don't ask 'why'. Ask 'what for'. What is this happening for me to do." My mom, who has always been religious, says something similar. "When a door closes god opens a window."
+Elijah Cummings said is his closing statement in the recent Cohen hearing on Captial Hill that "when something happens to you, don't ask 'why'. Ask 'what for'. What is this happening for me to do." 
 
-I'm taking this all in, difficulty, as yet another pep talk. Yet another rallying point. Another starting line... This time, tbh, I'm pretty fucking sick of it...
+My mom says something similar: when a door closes a window opens.
 
-Here's my reality: I've worked since I was able to work. I've had dozens of jobs, from Chuck-E-Cheese to the New York City Transit Authority. Throughout my life NOTHING has been static. I took a ridiculous risk for 7 1/2 years in my twenties to work for a lady in a small business (it was just me and her) designing anything and everything for clients without any benefits whatsoever. Because the barista job I'd left behind to do that did provide me basic benefits but just wasn't fulfilling my need to be creative and make stuff.
+I'm taking this all in, difficulty, as you might imagine. I just don't feel as though I want to site through yet another pep talk. Yet another rallying cry. Another starting line...
 
-That risk paid off. I built a portfolio of work. I learned what being a professional designer entailed. And I grew up a lot. These things made me a candidate for an excellent grad school in interaction design. Which would later propel me into the ranks of silicone valley tech workers. Or as you might know us as <i>tech brats</i>.
+Here's my reality: I've worked since I was able to work. I've had dozens of jobs, from Chuck-E-Cheese to the New York City Transit Authority. Throughout my life nothing has been static. I took a ridiculous risk for 7 1/2 years in my twenties to work for a lady in a small business (it was just me and her) designing anything and everything for clients. The risk is that I did so without any benefits whatsoever. The barista job I'd left behind to do it didn't provide benefits either.
 
-Since graduating I have worked freelance, as a contractor more times than I would like to admit, as a fellow, and ONCE finally as an employee. That one gainful employment came only after forcing the companies hand by showing my unworldly personal expense of trying to remain on contract and provide my growing family with benefits. 
+That risk paid off. I built a portfolio of work. I learned what being a professional designer entailed. I grew up a lot.And I didn't fall off a bike and break a bone therefore I wasn't life-punched for my negligence to pay for exsorbinant out-of-pocket healthcare. Working in a small design firm for this many years is the only thing that made me a candidate for the excellent grad school I got into. Which would later propel me into the ranks of silicone valley tech workers, you might know us as <i>tech brats</i>.
 
-Now, once again all that hangs by a thread. It's as if none of it was ever real in the first place. And it's not just me, all my friends, all my colleagues, we are all feeling the same way. See this twitter thread where millennials share the sheer ridiculous number of jobs they've had since they started working. All while our parents spend weekends at the Hard rock casino golfing there way into the sunset, all expenses paid on their 40 year pensions. In 40 years I'll be 76.
+Since graduating I have worked freelance, as a contractor more times than I would like to admit, as a fellow, and once finally as an employee. Whew. Yay! That one gainful employment came only after forcing the companies hand by showing my unworldly personal expense of trying to remain on contract and provide my growing family with modern healthcare. 
+
+Now, once again all that hangs by a thread. It's as if none of it was ever real in the first place. And it's not just me, all my friends, all my colleagues, we are all feeling the same way. Bear witness to this twitter thread where millennials share the sheer ridiculous number of jobs they've had since they started working.
 
 <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Millennials (ages 22-38), reply to this tweet with the number of jobs (including unpaid internships) you&#39;ve worked. I&#39;m tryna see something.</p>&mdash; Charles Preston (@_CharlesPreston) <a href="https://twitter.com/_CharlesPreston/status/1103313694774181888?ref_src=twsrc%5Etfw">March 6, 2019</a></blockquote>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 Back to what Elijah said about not asking "why is this happening to us?". Instead "what is this happening to us for?". Maybe FOR us to overthrow this corrupt corporate bullshit shark tank of an economy before the only coffee you can buy is Starbucks and the only book seller is Amazon? FOR us to find accountability in the rich not creating any valuable jobs and instead gloating about universal basic incomes and automating work people enjoy and take pride in. FOR intellectual propertying and lawyering up everything some intern thought of with a patent so any new idea can easily be squashed as easily as our lovely boomer president paying off a porn star. FOR pressure us to take up arms in blame and resentment and eat the rich and other in the generations in front of us that seamed to forget their intrinsic duty to "pay it forward". FOR us to be quiet and work diligently in our gig economy until we're the equivalent of blobs of meat that have zero for eyes and only hope is some far fetched socialist revolution promised the shared economy, or now is it the blockchain?
-
-I tired of this shit. I want to work. I want to dedicate myself to the things I work on. I want to refine my craftsmanship as I dedicate myself to the things I work on. That, unfortunately, takes times and stability. Of which I have neither.
