--- a/_posts/2019-03-07-damn-2019.markdown
+++ b/_posts/2019-03-07-damn-2019.markdown
@@ -18,7 +18,7 @@ I'm taking this all in, difficulty, as you might imagine. I just don't feel as t
 
 Here's my reality: I've worked since I was able to work. I've had dozens of jobs, from Chuck-E-Cheese to the New York City Transit Authority. Throughout my life nothing has been static. I took a ridiculous risk for 7 1/2 years in my twenties to work for a lady in a small business (it was just me and her) designing anything and everything for clients. The risk is that I did so without any benefits whatsoever. The barista job I'd left behind to do it didn't provide benefits either.
 
-That risk paid off. I built a portfolio of work. I learned what being a professional designer entailed. I grew up a lot.And I didn't fall off a bike and break a bone therefore I wasn't life-punched for my negligence to pay for exsorbinant out-of-pocket healthcare. Working in a small design firm for this many years is the only thing that made me a candidate for the excellent grad school I got into. Which would later propel me into the ranks of silicone valley tech workers, you might know us as <i>tech brats</i>.
+That risk paid off. I built a portfolio of work. I learned what being a professional designer entailed. I grew up a lot.And I didn't fall off a bike and break a bone therefore I wasn't life-punched for my negligence to pay for exorbitant out-of-pocket healthcare. Working in a small design firm for this many years is the only thing that made me a candidate for the excellent grad school I got into. Which would later propel me into the ranks of silicone valley tech workers, you might know us as <i>tech brats</i>.
 
 Since graduating I have worked freelance, as a contractor more times than I would like to admit, as a fellow, and once finally as an employee. Whew. Yay! That one gainful employment came only after forcing the companies hand by showing my unworldly personal expense of trying to remain on contract and provide my growing family with modern healthcare. 
 
