--- a/_posts/2024-04-04-twirl-me.markdown
+++ b/_posts/2024-04-04-twirl-me.markdown
@@ -16,7 +16,7 @@ image:
 Please swirl me in your mind, so I can be a colored painting that you'll look upon
 Spin spin with me..."
 
-# Should sharing be as light and swift as an arrow or a bombast and crushing as a cannon ball?
+## Should sharing be as light and swift as an arrow or a bombast and crushing as a cannon ball?
 
 I'm thinking this morning about how I share the things I share. I am probably like everyone else where when I see something I like, I have an urge to share it with others. Maybe that's just me being very extroverted. Nonetheless, I've been wondering why sharing matters or if sharing is really just a self-satisfaction, small dopamine hit type thing. I really don't know the science and I haven't done any research to understand it. I only know how it affects me and it feels good.
 
