--- a/_posts/2024-04-04-twirl-me.markdown
+++ b/_posts/2024-04-04-twirl-me.markdown
@@ -32,7 +32,7 @@ Maybe I should share here? Maybe I should make this a newsletter or a substack? 
 
 My friend tells me that sharing playlists helps our music algorithms not go stale. I wonder if I can share one here. One sec.
 
-I can't. I can only share the [https://music.youtube.com/playlist?list=PLxT4Ajv3-F0nyXCyJEGa148JOm3\_fZKig&si=vLCmWidxJwayCKc1\].
+I can't. I can only share the [link](https://music.youtube.com/playlist?list=PLxT4Ajv3-F0nyXCyJEGa148JOm3\_fZKig&si=vLCmWidxJwayCKc1\).
 
 ## Gonna try it
 
